# rung

./: Cargo.toml  LICENSE  README.md  build.sh
assets/angular/: angular.json
assets/files/: example-2.ts.txt
assets/json/: example.json  example.schema.json
assets/templates/: template-mit.txt
assets/web/: 404.html  index.html
src/: angular.rs  check_header.rs  files.rs  json.rs  lib.rs  logger.rs  main.rs  serve.rs  templates.rs  utils.rs
test/: template-asf.txt
tests/: check_header_test.rs  check_json_test.rs  common.rs  integration_test.rs  templates_test.rs  utils_test.rs  validate_json_test.rs
