[package]
name = "rung"
version = "0.1.0"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
description = "Rust tools for Angular projects."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.11"
env_logger = "0.8.1"
tempfile = "3.1.0"
serde = "1.0"
serde_json = "1.0"
jsonschema = "0.4.0"
anyhow = "1.0.34"
actix-web = "3.2.0"
actix-files = "0.4.0"
